--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openbanking-ui-scripts",
   "version": "1.0.0",
-  "description": "Tooling necessary to build OpenBanking apps\\",
+  "description": "Tooling necessary to build OpenBanking apps",
   "main": "index.js",
   "scripts": {
     "newTheme": "bin/openbanking-ui-cli newTheme"
@@ -23,6 +23,7 @@
     "@angular/cli": "^8.3.20",
     "ejs": "^3.0.1",
     "fs-extra": "^8.1.0",
+    "gzip-size": "^5.1.1",
     "html-minifier": "^4.0.0",
     "lodash": "^4.17.15",
     "merge-dirs": "^0.2.1",
