--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openbanking-ui-scripts",
+  "name": "openbanking-ui-cli",
   "version": "1.0.0",
   "description": "Tooling necessary to build OpenBanking apps",
   "main": "index.js",
