adding auto publishing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "openbanking-ui-cli",
-  "version": "1.0.0",
+  "name": "@forgerock/openbanking-ui-cli",
+  "version": "0.0.1",
   "description": "Tooling necessary to build OpenBanking apps",
   "main": "index.js",
   "scripts": {
