--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@forgerock/openbanking-ui-cli",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Tooling necessary to build OpenBanking apps",
   "main": "index.js",
   "scripts": {
@@ -22,11 +22,13 @@
   "dependencies": {
     "@angular/cli": "^8.3.20",
     "ejs": "^3.0.1",
+    "favicons": "^6.0.0",
     "fs-extra": "^8.1.0",
     "gzip-size": "^5.1.1",
     "html-minifier": "^4.0.0",
     "lodash": "^4.17.15",
     "merge-dirs": "^0.2.1",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "svg2img": "^0.6.1"
   }
 }
