--- a/scripts/addTheme/build-settings.template
+++ b/scripts/addTheme/build-settings.template
@@ -21,6 +21,20 @@ module.exports = {
           id: 'og:description',
           tag: '<meta name="og:description" property="og:description" content="<%= metadata.description %>">',
           order: 4
+        },
+        {
+          id: "splashscreen",
+          tag: '<link href="./assets/splashscreen.css" rel="stylesheet" />',
+        },
+        {
+          id: "icons",
+          tag:
+            '<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />',
+        },
+        {
+          id: "fonts",
+          tag:
+            '<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />',
         }<% if (favicons) { %>,
         {
           id: 'favicons',
